토큰, 팀 코드수수정